# tic-tac-toe

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
game/entities/: __init__.py  field.py  mark.py  square.py
