[project]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = [
    {name = "alex6712",email = "alexeivanyukov@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

